--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@tanstack/react-query": "^5.60.0",
+    "@tanstack/react-query-devtools": "^5.60.0",
     "apexcharts": "^4.1.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "react": "^19.2.3",
     "react-apexcharts": "^1.7.0",
+    "react-datepicker": "^9.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.3",
@@ -40,6 +44,7 @@
     "@tailwindcss/postcss": "^4.0.8",
     "@types/node": "^25.0.1",
     "@types/react": "^19.2.7",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
