--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@tanstack/react-query": "^5.60.0",
     "@tanstack/react-query-devtools": "^5.91.1",
     "apexcharts": "^4.1.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-apexcharts": "^1.7.0",
     "react-datepicker": "^9.0.0",
