--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-apexcharts": "^1.7.0",
@@ -34,6 +35,7 @@
     "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.10.1",
     "swiper": "^11.2.3",
